--- a/composer.json
+++ b/composer.json
@@ -6,8 +6,13 @@
     "type": "project",
     "require": {
         "php": ">=5.6.4",
+        "encore/laravel-admin": "^1.4-dev",
+        "guzzlehttp/guzzle": "^6.3",
         "laravel/framework": "5.4.*",
-        "laravel/tinker": "~1.0"
+        "laravel/tinker": "~1.0",
+        "nesbot/carbon": "^1.22",
+        "predis/predis": "^1.1",
+        "prettus/l5-repository": "^2.6"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
