--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
         "overtrue/pinyin": "^3.0",
         "predis/predis": "^1.1",
         "prettus/l5-repository": "^2.6",
-        "voku/simple_html_dom": "^3.1"
+        "voku/simple_html_dom": "^3.1",
+        "hightman/xunsearch": "^1.4"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
