--- a/composer.json
+++ b/composer.json
@@ -8,15 +8,16 @@
         "php": ">=5.6.4",
         "encore/laravel-admin": "^1.4-dev",
         "guzzlehttp/guzzle": "^6.3",
+        "hightman/xunsearch": "^1.4",
         "jenssegers/mongodb": "^3.2",
         "laravel/framework": "5.4.*",
         "laravel/tinker": "~1.0",
+        "maatwebsite/excel": "^2.1",
         "nesbot/carbon": "^1.22",
         "overtrue/pinyin": "^3.0",
         "predis/predis": "^1.1",
         "prettus/l5-repository": "^2.6",
-        "voku/simple_html_dom": "^3.1",
-        "hightman/xunsearch": "^1.4"
+        "voku/simple_html_dom": "^3.1"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
